# AirHound

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  diagram.json  justfile  wokwi.toml
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: format-rust.sh
.devcontainer/: Dockerfile  devcontainer.json  entrypoint.sh
.githooks/: commit-msg  pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/scripts/: preview-comment.js  preview-comment.test.js
.github/workflows/: ci.yml  container.yml  release.yml
firmware-std/: Cargo.toml  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3
firmware-std/.cargo/: config.toml
firmware-std/src/: buzzer.rs  display.rs  main.rs
schemas/: device-message.v1.schema.json  host-command.v1.schema.json  signatures.v1.schema.json
schemas/examples/: flock-raven-airtag.sigs.json
src/: board.rs  buzzer.rs  comm.rs  defaults.rs  display.rs  filter.rs  lib.rs  main.rs  protocol.rs  rules.rs  scanner.rs
