[package]
name = "airhound-std"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "AirHound ESP-IDF std firmware"

[features]
default = ["xiao"]
xiao = ["airhound/board-xiao"]
m5stickc = ["airhound/board-m5stickc", "dep:mipidsi", "dep:embedded-graphics", "dep:embedded-hal-bus", "dep:embedded-hal"]

[dependencies]
airhound = { path = "..", default-features = false }
esp-idf-svc = { version = "0.51", features = ["alloc"] }
esp32-nimble = "0.11"
log = "0.4"
heapless = { version = "0.9", features = ["serde"] }
anyhow = "1"

# Display + buzzer (M5StickC only)
mipidsi = { version = "0.9", default-features = false, optional = true }
embedded-graphics = { version = "0.8", optional = true }
embedded-hal-bus = { version = "0.3", optional = true }
embedded-hal = { version = "1.0", optional = true }

[build-dependencies]
embuild = "0.33"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "thin"
opt-level = "s"
overflow-checks = false
